feat: scaffold FastAPI /predict, GigaChat wrapper, matcher, catalog manager stub, Streamlit UI, docs and requirements

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,13 @@ dist/
 # General
 *.log
 *.tmp
+.env
+__pycache__/
+.pytest_cache/
+*.sqlite3
+*.db
+/.venv/
+/venv/
+/dist/
+/build/
+/node_modules/
